--- a/src/index.css
+++ b/src/index.css
@@ -162,6 +162,7 @@ body {
   line-height: 1.6;
   overflow: hidden;
   height: 100vh;
+  height: 100dvh;
   width: 100vw;
 }
 
